--- a/index.css
+++ b/index.css
@@ -1,19 +1,588 @@
-@media (min-width: 1200px) {
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+#header {
+  position: absolute;
+  display: flex;
+  left: 5%;
+  z-index: 99;
+}
+
+.text {
+  padding-bottom: 4rem;
+}
+.welcome {
+  background-image: url("../images/001.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+}
+
+.welcome-overlay {
+  content: "";
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+}
+
+.welcome2 {
+  position: relative;
+  top: 15rem;
+  z-index: 99;
+  width: 80%;
+  margin: auto;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+  flex-direction: row;
+  padding: 1rem;
+}
+.image-header {
+  width: 30%;
+}
+.logos {
+  padding: 3rem;
+}
+.image-logo {
+  width: 100%;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.items {
+  font-size: 1.5rem;
+}
+
+.Btn {
+  width: 200px;
+  height: 80px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(
+    to right,
+    #77530a,
+    #ffd277,
+    #77530a,
+    #77530a,
+    #ffd277,
+    #77530a
+  );
+  background-size: 250%;
+  background-position: left;
+  color: #ffd277;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition-duration: 1s;
+  overflow: hidden;
+}
+
+.Btn::before {
+  position: absolute;
+  content: "GET STARTED";
+  color: #ffd277;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 97%;
+  height: 90%;
+  border-radius: 8px;
+  transition-duration: 1s;
+  background-color: rgba(0, 0, 0, 0.842);
+  background-size: 200%;
+}
+
+.Btn:hover {
+  background-position: right;
+  transition-duration: 1s;
+}
+
+.Btn:hover::before {
+  background-position: right;
+  transition-duration: 1s;
+}
+
+.Btn:active {
+  transform: scale(0.95);
+}
+.button {
+  padding: 2rem;
+}
+.digital-div {
+  display: flex;
+  margin-top: -7rem;
+}
+.digital-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.digital-text {
+  font-size: 1.5rem;
+  width: 100%;
+  margin-top: 5.6rem;
+}
+.digital {
+  position: relative;
+  top: 18rem;
+  margin-left: 1.5rem;
+}
+.digital-head {
+  font-size: 2rem;
+}
+.social {
+  position: relative;
+  top: 19rem;
+  width: 100%;
+  margin-left: 1rem;
+}
+.social-div {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+}
+.social-image-div {
+  width: 100%;
+}
+.social-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.social-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-right: 4rem;
+  margin-left: 2rem;
+  margin-top: 3rem;
+}
+.social-media {
+  font-size: 2rem;
+  text-align: right;
+  margin-right: 6rem;
+  margin-bottom: -3rem;
+}
+
+.content {
+  position: relative;
+  padding-bottom: 12rem;
+  margin-left: 1.2rem;
+  top: 20rem;
+}
+.content-div {
+  display: flex;
+  width: 100%;
+}
+.content-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-top: 4rem;
+}
+.content-heading {
+  font-size: 2rem;
+  margin-bottom: -3rem;
+}
+.content-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.content-img {
+  width: 100%;
+}
+.branding {
+  position: relative;
+  width: 100%;
+  top: 10rem;
+  padding-bottom: 10rem;
+}
+.brand-container {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+  margin-top: -6rem;
+}
+.brand-img-div {
+  width: 100%;
+}
+.brand-image {
+  width: 100%;
+  border-radius: 10px;
+  margin-left: 1rem;
+}
+
+.branding-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-top: 5rem;
+}
+.brand-head {
+  font-size: 2rem;
+  text-align: right;
+  margin-right: 10rem;
+}
+
+.portfolio-section {
+  position: relative;
+  padding-bottom: 4rem;
+  top: 10rem;
+}
+.portfolio-div {
+  display: flex;
+  margin-top: -7rem;
+  width: 100%;
+}
+.portfolio-text {
+  font-size: 1.5rem;
+  width: 60%;
+  margin-left: 2rem;
+  margin-top: 6rem;
+}
+.portfolio-head {
+  font-size: 2rem;
+  margin-left: 5rem;
+}
+.portfolio-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.portfolio-img {
+  width: 100%;
+}
+.successful-section {
+  position: relative;
+  width: 100%;
+  margin-left: 1rem;
+  top: 7.5rem;
+}
+.successful-text {
+  font-size: 1.5rem;
+  width: 60%;
+  margin-top: 1rem;
+}
+.successful {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0.5rem;
+}
+.success-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.success-img {
+  width: 100%;
+}
+.case-studies {
+  position: relative;
+  top: 10rem;
+}
+.case-div {
+  display: flex;
+}
+.case-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-left: 1rem;
+}
+.case-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.case-img {
+  width: 100%;
+}
+
+.more-info {
+  position: relative;
+  width: 100%;
+  margin-left: 1rem;
+  top: 12rem;
+  padding-bottom: 2rem;
+}
+.more-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 1rem;
+}
+.more-img {
+  width: 100%;
+}
+.more-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.more-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-top: 1rem;
+  margin-right: 1rem;
+}
+.about {
+  position: relative;
+  padding-bottom: 2rem;
+  top: 12rem;
+}
+.about-head {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  margin-left: 4rem;
+}
+.about-us-div {
+  display: flex;
+  margin-top: -6rem;
+}
+.about-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-left: 1rem;
+  margin-top: 4.5rem;
+}
+.about-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.about-img {
+  width: 100%;
+}
+
+.at-info {
+  position: relative;
+  width: 100%;
+  margin-left: 1rem;
+  top: 11rem;
+}
+.at-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+}
+.at-img {
+  width: 100%;
+}
+.at-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.at-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-top: 1rem;
+}
+.priority {
+  position: relative;
+  top: 12rem;
+}
+.priority-div {
+  display: flex;
+}
+.priority-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-left: 1rem;
+}
+.priority-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.priority-img {
+  width: 100%;
+}
+.great {
+  position: relative;
+  top: 13.5rem;
+  width: 100%;
+  margin-left: 1rem;
+  padding-bottom: 2rem;
+}
+.great-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+}
+.great-img {
+  width: 100%;
+}
+.great-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.great-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-top: 1rem;
+}
+.future {
+  position: relative;
+  top: 13rem;
+  padding-bottom: 3rem;
+}
+.future-div {
+  display: flex;
+}
+.future-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-left: 1rem;
+}
+.future-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.future-img {
+  width: 100%;
+}
+.contacts {
+  position: relative;
+  top: 14rem;
+  width: 100%;
+  margin-left: 1rem;
+  padding-bottom: 13rem;
+}
+.contact-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+  margin-top: -8rem;
+}
+.contact-img {
+  width: 100%;
+}
+.contact-heading1 {
+  font-size: 2rem;
+  text-align: right;
+  margin-right: 10rem;
+}
+.contact-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.contact-text {
+  font-size: 1.5rem;
+  width: 50%;
+  margin-top: 6.5rem;
+}
+.info-text {
+  font-size: 1.5rem;
+  top: 20rem;
+  padding: 2rem;
+}
+#name {
+  width: 20%;
+  height: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 14px;
+}
+.name {
+  font-size: 1.5rem;
+}
+#email {
+  width: 25%;
+  height: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 14px;
+}
+.email {
+  font-size: 1.5rem;
+}
+select {
+  width: 35%;
+  height: 0.8rem;
+  padding: 0.8rem;
+  border-radius: 10px;
+  font-size: 14px;
+}
+.subject {
+  font-size: 1.5rem;
+}
+#textarea {
+  width: 30%;
+  height: 8rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 14px;
+  margin-top: 1rem;
+  margin-left: 1.5rem;
+}
+.message {
+  font-size: 1.6rem;
+}
+.form-section {
+  background-color: rgba(38, 38, 38, 0.545);
+  text-align: center;
+  padding: 2rem;
+  margin-left: 1rem;
+}
+.submit-button {
+  padding: 1rem;
+  margin-top: 1rem;
+  border-radius: 10px;
+  width: 10%;
+  font-size: 0.95rem;
+  text-align: center;
+}
+button {
+  background-color: #892be22a;
+}
+#icons {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+}
+.texts {
+  font-size: 0.7rem;
+  margin-left: 0.5rem;
+}
+.terms {
+  display: flex;
+  justify-content: space-around;
+}
+.copy {
+  font-size: 1.2rem;
+  color: white;
+}
+.copyrights {
+  height: 3rem;
+}
+footer {
+  background-color: #00000095;
+  padding: 2rem;
+  margin-left: 1rem;
+}
+
+@media (max-width:195px)  {
   body {
     margin: 0;
     overflow-x: hidden;
+    background-color: red;
   }
   #header {
     position: absolute;
-    display: flex;
-    left: 5%;
-    z-index: 99;
-  }
-  .para {
-    font-size: 2rem;
-  }
+    display: none;
+  } */
+  
   .text {
-    padding-bottom: 1rem;
+    padding-bottom: 4rem;
   }
   .welcome {
     background-image: url("../images/001.jpg");
@@ -22,10 +591,10 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 100vh;
-    width: 100%;
+     height: 100vh;
+     width: 100%
   }
-
+  
   .welcome-overlay {
     content: "";
     background: rgba(0, 0, 0, 0.6);
@@ -35,7 +604,7 @@
     height: 100vh;
     width: 100%;
   }
-
+  
   .welcome2 {
     position: relative;
     top: 15rem;
@@ -43,8 +612,9 @@
     width: 80%;
     margin: auto;
     color: white;
+    font-size: 1rem;
   }
-
+  
   .nav-container {
     display: flex;
     justify-content: space-around;
@@ -65,11 +635,11 @@
     text-decoration: none;
     color: white;
   }
-
+  
   .items {
     font-size: 1.5rem;
   }
-
+  
   .Btn {
     width: 200px;
     height: 80px;
@@ -95,7 +665,7 @@
     transition-duration: 1s;
     overflow: hidden;
   }
-
+  
   .Btn::before {
     position: absolute;
     content: "GET STARTED";
@@ -110,66 +680,57 @@
     background-color: rgba(0, 0, 0, 0.842);
     background-size: 200%;
   }
-
+  
   .Btn:hover {
     background-position: right;
     transition-duration: 1s;
   }
-
+  
   .Btn:hover::before {
     background-position: right;
     transition-duration: 1s;
   }
-
+  
   .Btn:active {
     transform: scale(0.95);
   }
   .button {
     padding: 2rem;
   }
-  .marketing {
+  .digital-div {
     display: flex;
     margin-top: -7rem;
   }
   .digital-image {
-    width: 60%;
-    margin-left: 3rem;
+    width: 100%;
     border-radius: 10px;
   }
   .digital-text {
-    font-size: 1.7rem;
-    width: 60%;
+    font-size: 1.5rem;
+    width: 100%;
     margin-top: 5.6rem;
   }
   .digital {
     position: relative;
-    top: 35rem;
-    margin-left: 5rem;
-    padding-bottom: 4rem;
+    top: 18rem;
+    margin-left: 1.5rem;
   }
   .digital-head {
-    font-size: 3rem;
-  }
-  .image {
-    width: 60%;
-    height: 60%;
-    margin: 0;
+    font-size: 2rem;
   }
   .social {
     position: relative;
-    top: 37rem;
-    padding-bottom: 24rem;
-    width: 90%;
-    margin-left: 3.5rem;
+    top: 19rem;
+    width: 100%;
+    margin-left: 1rem;
   }
   .social-div {
     display: flex;
     flex-direction: row-reverse;
-    gap: 2rem;
-    margin-top: -8rem;
+    width: 100%;
   }
   .social-image-div {
-    width: 60%;
+    width: 100%;
   }
   .social-image {
     width: 100%;
@@ -177,56 +738,48 @@
   }
   .social-text {
     font-size: 1.5rem;
-    width: 40%;
-    margin-top: 6rem;
-    margin-right: 3rem;
+    width: 50%;
+    margin-right: 4rem;
+    margin-left: 2rem;
+    margin-top: 3rem;
   }
-  .social-head {
-    font-size: 3rem;
+  .social-media {
+    font-size: 2rem;
     text-align: right;
-    margin-right: 8rem;
-    margin-top: 2rem;
+    margin-right: 6rem;
+    margin-bottom: -3rem;
   }
-
+  
   .content {
     position: relative;
     padding-bottom: 12rem;
     margin-left: 1.2rem;
-    top: 15rem;
+    top: 20rem;
   }
   .content-div {
     display: flex;
-    margin-top: -6rem;
+    width: 100%;
   }
   .content-text {
-    font-size: 1.7rem;
-    width: 30%;
-    margin-left: 2rem;
+    font-size: 1.5rem;
+    width: 50%;
     margin-top: 4rem;
   }
-
+  .content-heading {
+    font-size: 2rem;
+    margin-bottom: -3rem;
+  }
   .content-image {
     width: 100%;
-    margin-left: 3rem;
     border-radius: 10px;
   }
   .content-img {
-    width: 50%;
+    width: 100%;
   }
-  .content-head {
-    width: 23%;
-  }
-
-  .head {
-    font-size: 2.5rem;
-    text-align: center;
-  }
-
   .branding {
     position: relative;
-    width: 90%;
-    margin-left: -4rem;
-    top: 8rem;
+    width: 100%;
+    top: 10rem;
     padding-bottom: 10rem;
   }
   .brand-container {
@@ -236,77 +789,75 @@
     margin-top: -6rem;
   }
   .brand-img-div {
-    width: 60%;
+    width: 100%;
   }
   .brand-image {
     width: 100%;
     border-radius: 10px;
+    margin-left: 1rem;
   }
-
+  
   .branding-text {
     font-size: 1.5rem;
-    width: 30%;
-    margin-top: 4rem;
+    width: 50%;
+    margin-top: 5rem;
   }
   .brand-head {
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: right;
     margin-right: 10rem;
   }
-
+  
   .portfolio-section {
     position: relative;
-    padding-bottom: 10rem;
-    top: 8rem;
+    padding-bottom: 4rem;
+    top: 10rem;
   }
   .portfolio-div {
     display: flex;
     margin-top: -7rem;
+    width: 100%;
   }
   .portfolio-text {
-    font-size: 1.7rem;
-    width: 30%;
+    font-size: 1.5rem;
+    width: 60%;
     margin-left: 2rem;
     margin-top: 6rem;
   }
   .portfolio-head {
-    font-size: 3rem;
-    margin-bottom: 2rem;
-    margin-left: 4rem;
+    font-size: 2rem;
+    margin-left: 5rem;
   }
-  .portfolio-div {
-    left: 4rem;
-  }
-
   .portfolio-image {
     width: 100%;
     margin-left: 2rem;
     border-radius: 10px;
   }
   .portfolio-img {
-    width: 50%;
+    width: 100%;
   }
   .successful-section {
     position: relative;
-    width: 90%;
-    margin-left: -6rem;
-    top: 6rem;
+    width: 100%;
+    margin-left: 1rem;
+    top: 7.5rem;
   }
   .successful-text {
     font-size: 1.5rem;
-    width: 30%;
-    margin-left: 2rem;
+    width: 60%;
+    margin-top: 1rem;
   }
   .successful {
     display: flex;
     flex-direction: row-reverse;
+    gap: 0.5rem;
   }
   .success-image {
     width: 100%;
     border-radius: 10px;
   }
   .success-img {
-    width: 60%;
+    width: 100%;
   }
   .case-studies {
     position: relative;
@@ -316,9 +867,9 @@
     display: flex;
   }
   .case-text {
-    font-size: 1.7rem;
-    width: 30%;
-    margin-left: 2rem;
+    font-size: 1.5rem;
+    width: 50%;
+    margin-left: 1rem;
   }
   .case-image {
     width: 100%;
@@ -326,30 +877,23 @@
     border-radius: 10px;
   }
   .case-img {
-    width: 50%;
+    width: 100%;
   }
-  .case-studies {
-    position: relative;
-    padding-bottom: 10rem;
-  }
-  .case-text {
-    font-size: 1.5rem;
-    width: 30%;
-  }
+  
   .more-info {
     position: relative;
-    width: 90%;
-    margin-left: -5.5rem;
-    top: 4rem;
-    padding-bottom: 4rem;
+    width: 100%;
+    margin-left: 1rem;
+    top: 12rem;
+    padding-bottom: 2rem;
   }
   .more-div {
     display: flex;
     flex-direction: row-reverse;
-    gap: 2rem;
+    gap: 1rem;
   }
   .more-img {
-    width: 60%;
+    width: 100%;
   }
   .more-image {
     width: 100%;
@@ -357,16 +901,17 @@
   }
   .more-text {
     font-size: 1.5rem;
-    width: 30%;
+    width: 50%;
     margin-top: 1rem;
+    margin-right: 1rem;
   }
   .about {
     position: relative;
     padding-bottom: 2rem;
-    top: 6rem;
+    top: 12rem;
   }
   .about-head {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 2rem;
     margin-left: 4rem;
   }
@@ -375,10 +920,10 @@
     margin-top: -6rem;
   }
   .about-text {
-    font-size: 1.7rem;
-    width: 30%;
-    margin-left: 2rem;
-    margin-top: 6rem;
+    font-size: 1.5rem;
+    width: 50%;
+    margin-left: 1rem;
+    margin-top: 4.5rem;
   }
   .about-image {
     width: 100%;
@@ -386,14 +931,14 @@
     border-radius: 10px;
   }
   .about-img {
-    width: 50%;
+    width: 100%;
   }
-
+  
   .at-info {
     position: relative;
-    width: 90%;
-    margin-left: -5rem;
-    top: 8rem;
+    width: 100%;
+    margin-left: 1rem;
+    top: 11rem;
   }
   .at-div {
     display: flex;
@@ -401,7 +946,7 @@
     gap: 2rem;
   }
   .at-img {
-    width: 60%;
+    width: 100%;
   }
   .at-image {
     width: 100%;
@@ -409,21 +954,20 @@
   }
   .at-text {
     font-size: 1.5rem;
-    width: 30%;
+    width: 50%;
     margin-top: 1rem;
   }
   .priority {
     position: relative;
-    top:12rem;
-    margin-left: 1.8rem;
+    top: 12rem;
   }
   .priority-div {
     display: flex;
   }
   .priority-text {
-    font-size: 1.7rem;
-    width: 30%;
-    margin-left: 2rem;
+    font-size: 1.5rem;
+    width: 50%;
+    margin-left: 1rem;
   }
   .priority-image {
     width: 100%;
@@ -431,13 +975,13 @@
     border-radius: 10px;
   }
   .priority-img {
-    width: 50%;
+    width: 100%;
   }
   .great {
     position: relative;
-    top:16rem;
-    width: 90%;
-    margin-left: -5rem;
+    top: 13.5rem;
+    width: 100%;
+    margin-left: 1rem;
     padding-bottom: 2rem;
   }
   .great-div {
@@ -446,7 +990,7 @@
     gap: 2rem;
   }
   .great-img {
-    width: 60%;
+    width: 100%;
   }
   .great-image {
     width: 100%;
@@ -454,21 +998,21 @@
   }
   .great-text {
     font-size: 1.5rem;
-    width: 30%;
+    width: 50%;
     margin-top: 1rem;
   }
   .future {
     position: relative;
-    top:18rem;
-    padding-bottom: 2rem;
+    top: 13rem;
+    padding-bottom: 3rem;
   }
   .future-div {
     display: flex;
   }
   .future-text {
-    font-size: 1.7rem;
-    width: 20%;
-    margin-left: 2rem;
+    font-size: 1.5rem;
+    width: 50%;
+    margin-left: 1rem;
   }
   .future-image {
     width: 100%;
@@ -476,14 +1020,14 @@
     border-radius: 10px;
   }
   .future-img {
-    width: 50%;
+    width: 100%;
   }
   .contacts {
     position: relative;
-    top:16rem;
-    width: 90%;
-    margin-left: -3.5rem;
-    padding-bottom: 20rem;
+    top: 14rem;
+    width: 100%;
+    margin-left: 1rem;
+    padding-bottom: 13rem;
   }
   .contact-div {
     display: flex;
@@ -492,10 +1036,10 @@
     margin-top: -8rem;
   }
   .contact-img {
-    width: 60%;
+    width: 100%;
   }
-  .contact-heading {
-    font-size: 3rem;
+  .contact-heading1 {
+    font-size: 2rem;
     text-align: right;
     margin-right: 10rem;
   }
@@ -505,27 +1049,26 @@
   }
   .contact-text {
     font-size: 1.5rem;
-    width: 30%;
-    margin-top: 6rem;
+    width: 50%;
+    margin-top: 6.5rem;
   }
   .info-text {
-    font-size: 1.7rem;
-    top:18rem;
-    padding:2rem;
-  
+    font-size: 1.5rem;
+    top: 20rem;
+    padding: 2rem;
   }
   #name {
-    width: 15%;
+    width: 20%;
     height: 0.5rem;
     padding: 0.5rem;
     border-radius: 10px;
     font-size: 14px;
   }
-  .label {
+  .name {
     font-size: 1.5rem;
   }
   #email {
-    width: 15%;
+    width: 25%;
     height: 0.5rem;
     padding: 0.5rem;
     border-radius: 10px;
@@ -535,7 +1078,7 @@
     font-size: 1.5rem;
   }
   select {
-    width: 15%;
+    width: 35%;
     height: 0.8rem;
     padding: 0.8rem;
     border-radius: 10px;
@@ -545,7 +1088,7 @@
     font-size: 1.5rem;
   }
   #textarea {
-    width: 20%;
+    width: 30%;
     height: 8rem;
     padding: 0.5rem;
     border-radius: 10px;
@@ -560,7 +1103,7 @@
     background-color: rgba(38, 38, 38, 0.545);
     text-align: center;
     padding: 2rem;
-    margin-left:1rem;
+    margin-left: 1rem;
   }
   .submit-button {
     padding: 1rem;
@@ -596,6 +1139,6 @@
   footer {
     background-color: #00000095;
     padding: 2rem;
-    margin-left:1rem;
+    margin-left: 1rem;
   }
 }
