--- a/index.css
+++ b/index.css
@@ -553,10 +553,10 @@ button {
   font-size: 0.7rem;
   margin-left: 0.5rem;
 }
-.terms {
+ .terms {
   display: flex;
   justify-content: space-around;
-}
+ } 
 .copy {
   font-size: 1.2rem;
   color: white;
@@ -1134,8 +1134,8 @@ footer {
     border-radius: 10px;
     font-size: 14px;
     margin-top: 1rem;
-   margin-left:0;
-   margin-right:0;
+    margin-left: 0;
+    margin-right: 0;
   }
   .message {
     font-size: 1.6rem;
@@ -1144,7 +1144,6 @@ footer {
     background-color: rgba(38, 38, 38, 0.545);
     text-align: center;
     padding: 2rem;
- 
   }
   .submit-button {
     padding: 1rem;
@@ -1167,26 +1166,640 @@ footer {
     font-size: 0.7rem;
     margin-left: 0.5rem;
   }
-  .terms {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 0;
-    margin-right:0;
-  }
   .copy {
     font-size: 1rem;
     color: white;
   }
   .copyrights {
     height: 3rem;
-    margin-top:-2rem;
-    padding-bottom:2.5rem;
-
+    margin-top: -2rem;
+    padding-bottom: 2.5rem;
   }
   footer {
     background-color: #00000095;
     padding: 2rem;
     margin-left: 1rem;
+  }
+}
+@media (min-width: 374px) and (max-width: 814px) {
+  body {
+    margin: 0;
+    overflow-x: hidden;
+  }
+  #header {
+    position: relative;
+  }
+
+  .welcome {
+    background-image: url("../images/001.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 50vh;
+    width: 100%;
+  }
+
+  .welcome-overlay {
+    content: "";
+    background: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    height: 50vh;
+    width: 100%;
+  }
+
+  .welcome2 {
+    position: relative;
+    top: 1rem;
+    width: 100%;
+    color: white;
+    font-size: 1rem;
+    left: 4%;
+  }
+
+  .nav-container {
+    display:block;
+    padding: 0.15rem;
+    margin-right:8rem;
+    
+
+  }
+  .image-header {
+    width: 100%;
+  }
+  .logos {
+    padding: 0.5rem;
+  }
+  .image-logo {
+    width: 100%;
+    height: 100%;
+  }
+  a {
+    text-decoration: none;
+    color: blue;
+  }
+
+  .items {
+    font-size: 1rem;
+    margin-right: 0;
+  }
+
+  .Btn {
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    background: linear-gradient(
+      to right,
+      #77530a,
+      #ffd277,
+      #77530a,
+      #77530a,
+      #ffd277,
+      #77530a
+    );
+    background-size: 250%;
+    background-position: left;
+    color: #ffd277;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition-duration: 1s;
+    overflow: hidden;
+  }
+
+  .Btn::before {
+    position: absolute;
+    content: "GET STARTED";
+    color: #ffd277;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 97%;
+    height: 90%;
+    border-radius: 8px;
+    transition-duration: 1s;
+    background-color: rgba(0, 0, 0, 0.842);
+    background-size: 200%;
+  }
+
+  .Btn:hover {
+    background-position: right;
+    transition-duration: 1s;
+  }
+
+  .Btn:hover::before {
+    background-position: right;
+    transition-duration: 1s;
+  }
+
+  .Btn:active {
+    transform: scale(0.95);
+  }
+  .button {
+    padding: 2rem;
+  }
+  .digital-div {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 2rem;
+  }
+  .digital-image {
+    width: 100%;
+    border-radius: 10px;
+  }
+  .digital-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 1rem;
+  }
+  .digital {
+    position: relative;
+    top: -2rem;
+  }
+  .digital-head {
+    font-size: 1.5rem;
+    text-align: center;
+
+  }
+  .social {
+    position: relative;
+    top: -2rem;
+    width: 100%;
+  }
+  .social-div {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+  .social-image-div {
+    width: 100%;
+  }
+  .social-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .social-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+  .social-media {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
+  }
+
+  .content {
+    position: relative;
+    padding-bottom: 2rem;
+    margin-left: 1.2rem;
+    top: -3rem;
+  }
+  .content-div {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+  .content-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 1rem;
+  }
+  .content-heading {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  .content-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .content-img {
+    width: 100%;
+  }
+  .branding {
+    position: relative;
+    width: 100%;
+    top: -6rem;
+    padding-bottom: 10rem;
+  }
+  .brand-container {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2rem;
+    margin-top: -6rem;
+  }
+  .brand-img-div {
+    width: 100%;
+  }
+  .brand-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .branding-text {
+    font-size: 1.5rem;
+    width: 100%;
+    margin-top: -1rem;
+    margin-left:0;
+    margin-right:0;
+  }
+  .brand-head {
+    font-size: 1.5rem;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 6rem;
+    text-align: center;
+  }
+
+  .portfolio-section {
+    position: relative;
+    padding-bottom: 2rem;
+    top: -10rem;
+  }
+  .portfolio-div {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: -7rem;
+    width: 100%;
+  }
+  .portfolio-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 1rem;
+  }
+  .portfolio-head {
+    font-size: 1.5rem;
+    margin-bottom: 8rem;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+  }
+  .portfolio-image {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    border-radius: 10px;
+  }
+  .portfolio-img {
+    width: 100%;
+  }
+  .successful-section {
+    position: relative;
+    width: 100%;
+    margin-left: 1rem;
+    top: -10rem;
+  }
+  .successful-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .successful {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .success-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .success-img {
+    width: 100%;
+  }
+  .case-studies {
+    position: relative;
+    top: -8rem;
+  }
+  .case-div {
+    display: flex;
+    flex-direction: column;
+  }
+  .case-text {
+    font-size: 1.5rem;
+    width: 100%;
+  }
+  .case-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .case-img {
+    width: 100%;
+  }
+
+  .more-info {
+    position: relative;
+    width: 100%;
+    margin-left: 1rem;
+    top: -8rem;
+    padding-bottom: 2rem;
+  }
+  .more-div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .more-img {
+    width: 100%;
+  }
+  .more-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .more-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .about {
+    position: relative;
+    padding-bottom: 2rem;
+    top: -6rem;
+  }
+  .about-head {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    margin-top: -4rem;
+  }
+  .about-us-div {
+    display: flex;
+    flex-direction: column;
+    margin-top: -6rem;
+  }
+  .about-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 4rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .about-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .about-img {
+    width: 100%;
+  }
+
+  .at-info {
+    position: relative;
+    width: 100%;
+    top: -10rem;
+  }
+  .at-div {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .at-img {
+    width: 100%;
+  }
+  .at-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -2rem;
+  }
+  .at-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 1rem;
+  }
+  .priority {
+    position: relative;
+    top: -8rem;
+  }
+  .priority-div {
+    display: flex;
+    flex-direction: column;
+  }
+  .priority-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -3rem;
+  }
+  .priority-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .priority-img {
+    width: 100%;
+  }
+  .great {
+    position: relative;
+    top: -8rem;
+    width: 100%;
+  }
+  .great-div {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .great-img {
+    width: 100%;
+  }
+  .great-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -2rem;
+  }
+  .great-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 1rem;
+  }
+  .future {
+    position: relative;
+    top: -8rem;
+    padding-bottom: 1rem;
+  }
+  .future-div {
+    display: flex;
+    flex-direction: column;
+  }
+  .future-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -1rem;
+  }
+  .future-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .future-img {
+    width: 100%;
+  }
+  .contacts {
+    position: relative;
+    top: -8rem;
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+  .contact-div {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: -8rem;
+  }
+  .contact-img {
+    width: 100%;
+  }
+  .contact-heading1 {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 1rem;
+  }
+  .contact-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -2rem;
+  }
+  .contact-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: 6.5rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .info-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: -10rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  #name {
+    width: 70%;
+    height: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-size: 14px;
+  }
+  .name {
+    font-size: 1.5rem;
+  }
+
+  #email {
+    width: 70%;
+    height: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-size: 14px;
+  }
+  .email {
+    font-size: 1.5rem;
+  }
+  select {
+    width: 100%;
+    height: 0.8rem;
+    padding: 0.8rem;
+    border-radius: 10px;
+    font-size: 14px;
+  }
+  .subject {
+    font-size: 1.5rem;
+  }
+  #textarea {
+    width: 70%;
+    height: 8rem;
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-size: 14px;
+    margin-top: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .message {
+    font-size: 1.6rem;
+  }
+  .form-section {
+    background-color: rgba(38, 38, 38, 0.545);
+    text-align: center;
+    padding: 2rem;
+  }
+  .submit-button {
+    padding: 1rem;
+    margin-top: 1rem;
+    border-radius: 10px;
+    width: 80%;
+    font-size: 0.95rem;
+    text-align: center;
+  }
+  button {
+    background-color: #892be22a;
+  }
+  #icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1rem;
+    text-align: center;
+    margin-top:-2rem;
+
+  }
+  .texts {
+    font-size: 0.7rem;
+    margin-left: 0.5rem;
+  }
+  .copy {
+    font-size: 1rem;
+    color: white;
+    text-align: center;
+    margin-top:1rem;
+  }
+  .copyrights {
+    height: 10%;
+    margin-top: -1rem;
+    padding-bottom: 1.5rem;
+    text-align: center;
+  }
+  footer {
+    background-color: #00000095;
+    padding: 1rem;
+    margin-left: 1rem;
+    margin-top:-1rem;
   }
 }
