--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
 body {
+  width:100%;
+  height:100%;
+  padding:0;
   margin: 0;
   overflow-x: hidden;
 }
@@ -572,8 +575,12 @@ footer {
 
 @media (min-width: 194px) and (max-width: 494px) {
   body {
+    width:100%;
+    height:100%;
+    padding:0;
     margin: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
   }
   #header {
     position: relative;
@@ -1182,8 +1189,12 @@ footer {
 }
 @media (min-width: 374px) and (max-width: 814px) {
   body {
+    width:100%;
+    height:100%;
+    padding:0;
     margin: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
   }
   #header {
     position: relative;
