--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
   height:100%;
   padding:0;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 #header {
   position: absolute;
@@ -579,8 +579,8 @@ footer {
     height:100%;
     padding:0;
     margin: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
+    
   }
   #header {
     position: relative;
@@ -1193,8 +1193,8 @@ footer {
     height:100%;
     padding:0;
     margin: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
+    
   }
   #header {
     position: relative;
@@ -1223,7 +1223,7 @@ footer {
     width: 100%;
     color: white;
     font-size: 1rem;
-    left: 4%;
+ margin:0 auto;
   }
 
   .nav-container {
