--- a/index.css
+++ b/index.css
@@ -3,13 +3,13 @@ body {
   height:100%;
   padding:0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 #header {
   position: absolute;
   display: flex;
   left: 5%;
-  z-index: 99;
+  
 }
 
 .text {
@@ -579,7 +579,7 @@ footer {
     height:100%;
     padding:0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     
   }
   #header {
@@ -1193,7 +1193,7 @@ footer {
     height:100%;
     padding:0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     
   }
   #header {
