--- a/index.css
+++ b/index.css
@@ -2094,3 +2094,146 @@ footer {
     margin-top: -0.45rem;
   }
 }
+@media (min-width: 767px) and (max-width: 1111px) {
+  #header {
+    position: relative;
+  }
+  .para {
+    padding: 1rem;
+  }
+
+  .welcome {
+    background-image: url("../images/001.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 38vh;
+    width: 100%;
+  }
+
+  .welcome-overlay {
+    content: "";
+    background: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    height: 38vh;
+    width: 100%;
+  }
+
+  .welcome2 {
+    position: relative;
+    top: 1rem;
+    width: 100%;
+    color: white;
+    font-size: 1rem;
+    padding: 1rem;
+  }
+
+  .nav-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0.15rem;
+    gap: 0.1rem;
+  }
+  .image-header {
+    width: 100%;
+  }
+  .logos {
+    padding: 0.5rem;
+  }
+  .image-logo {
+    width: 70%;
+    height: 70%;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
+  .items {
+    font-size: 0.85rem;
+    margin-right: 4rem;
+  }
+
+  .Btn {
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    background: linear-gradient(
+      to right,
+      #77530a,
+      #ffd277,
+      #77530a,
+      #77530a,
+      #ffd277,
+      #77530a
+    );
+    background-size: 250%;
+    background-position: left;
+    color: #ffd277;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition-duration: 1s;
+    overflow: hidden;
+  }
+
+  .Btn::before {
+    position: absolute;
+    content: "GET STARTED";
+    color: #ffd277;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 97%;
+    height: 90%;
+    border-radius: 8px;
+    transition-duration: 1s;
+    background-color: rgba(0, 0, 0, 0.842);
+    background-size: 200%;
+  }
+
+  .Btn:hover {
+    background-position: right;
+    transition-duration: 1s;
+  }
+
+  .Btn:hover::before {
+    background-position: right;
+    transition-duration: 1s;
+  }
+
+  .Btn:active {
+    transform: scale(0.95);
+  }
+  .button {
+    padding: 2rem;
+  }
+  .digital-div {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 2rem;
+  }
+  .digital-image {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: -1.5rem;
+  }
+  .digital-text {
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: -0.25rem;
+    padding: 0.3rem;
+  }
+  .digital {
+    position: relative;
+    top: -0.28rem;
+  }
+  .digital-head {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 0.55rem;
+  }
+}
